submit project error solved